WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277035
[WebGPU] PresentationContextIOSurface::present doesn't check for valid device
https://bugs.webkit.org/show_bug.cgi?id=277035
Summary
[WebGPU] PresentationContextIOSurface::present doesn't check for valid device
Mike Wyrzykowski
Reported
2024-07-24 13:52:37 PDT
[WebGPU] PresentationContextIOSurface::present doesn't check for valid device
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-07-24 13:53:01 PDT
radar://130758850
Mike Wyrzykowski
Comment 2
2024-07-24 14:00:05 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31183
EWS
Comment 3
2024-07-24 20:54:42 PDT
Committed
281331@main
(6e8106f73d63): <
https://commits.webkit.org/281331@main
> Reviewed commits have been landed. Closing PR #31183 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug