[WebGPU] PresentationContextIOSurface::present doesn't check for valid device https://bugs.webkit.org/show_bug.cgi?id=277035 <radar://130758850>

Reviewed by Dan Glastonbury.

Check for valid device prior and index to indexing into the Vector.

* LayoutTests/fast/webgpu/nocrash/fuzz-277035-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-277035.html: Added.
* Source/WebGPU/WebGPU/PresentationContextIOSurface.mm:

Canonical link: https://commits.webkit.org/281331@main